<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="600dp"
        android:paddingBottom="32dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_view"
            app:layout_constraintBottom_toTopOf="@+id/tvClear"
            app:layout_constraintDimensionRatio="W,360:340"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rectangle"
            android:src="@drawable/ic_rectangle"
            app:layout_constraintBottom_toBottomOf="@+id/topView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPreviousExpression"
            style="@style/ResultText.smallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/tvResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvResult"
            style="@style/ResultText.normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="end"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/topView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Guideline for button area margins -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <!-- First Row -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvClear"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/ac"
            android:layout_marginBottom="8dp"
            android:minHeight="70dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSeven"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/ibBack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintWidth_percent="0.18" />

        <ImageButton
            android:id="@+id/ibBack"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/arrow_back"
            android:drawableTop="@drawable/left_arrow"
            android:gravity="center"
            android:includeFontPadding="false"
            android:minHeight="70dp"
            android:src="@drawable/left_arrow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnModulus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvClear"
            app:layout_constraintTop_toTopOf="@+id/tvClear"
            app:layout_constraintWidth_percent="0.18"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnModulus"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/modulus"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnDivision"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibBack"
            app:layout_constraintTop_toTopOf="@+id/tvClear"
            app:layout_constraintWidth_percent="0.18" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/division"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnModulus"
            app:layout_constraintTop_toTopOf="@+id/btnModulus"
            app:layout_constraintWidth_percent="0.18" />

        <!-- Second Row -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeven"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/_7"
            android:layout_marginBottom="8dp"
            android:minHeight="70dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFour"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEight"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_8"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnNine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toTopOf="@+id/btnSeven"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNine"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_9"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiplication"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toTopOf="@+id/btnSeven"
            app:layout_constraintWidth_percent="0.18" />

        <Button
            android:id="@+id/btnMultiplication"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/x"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toTopOf="@+id/btnSeven"
            app:layout_constraintWidth_percent="0.18" />

        <!-- Third Row -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFour"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/_4"
            android:layout_marginBottom="8dp"
            android:minHeight="70dp"
            app:layout_constraintBottom_toTopOf="@+id/btnOne"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFive"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_5"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnSix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toTopOf="@+id/btnFour"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSix"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_6"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toTopOf="@+id/btnFour"
            app:layout_constraintWidth_percent="0.18" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/plus"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toTopOf="@+id/btnFour"
            app:layout_constraintWidth_percent="0.18" />

        <!-- Fourth Row -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOne"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/_1"
            android:layout_marginBottom="8dp"
            android:minHeight="70dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_changeSign"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTwo"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintTop_toTopOf="@+id/btnOne"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThree"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnMinus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toTopOf="@+id/btnOne"
            app:layout_constraintWidth_percent="0.18" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/minus"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnThree"
            app:layout_constraintTop_toTopOf="@+id/btnOne"
            app:layout_constraintWidth_percent="0.18" />

        <!-- Fifth Row -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_changeSign"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/sign_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnZero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnZero"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/_0"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_changeSign"
            app:layout_constraintTop_toTopOf="@+id/btn_changeSign"
            app:layout_constraintWidth_percent="0.18" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDot"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/dot"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btnEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnZero"
            app:layout_constraintTop_toTopOf="@+id/btn_changeSign"
            app:layout_constraintWidth_percent="0.18" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/CalculatorButton.Operation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/equal"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toTopOf="@+id/btn_changeSign"
            app:layout_constraintWidth_percent="0.18" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>